test/spec_vectors/unreached-invalid/fail/module_27.wat
(module (func $type-block-value-num-vs-void-after-return (block (return) (i32.const 1))))